# omop-learn

./: .gitignore  End of Life Deep Model Example.ipynb  End of Life Linear Model Ancestors Example.ipynb  End of Life Linear Model Example (All Positive Samples).ipynb  End of Life Linear Model Example (Flexible Windows).ipynb  End of Life Linear Model Example (With Nontemporal Features).ipynb  End of Life Linear Model Example More Prediction Times.ipynb  End of Life Linear Model Example.ipynb  LICENSE  NICU Deep Model Example.ipynb  ORM Benchmark.html  ORM Benchmark.ipynb  ORM End of Life Deep Model Example.ipynb  README.md  bigquery.env  config.py  dev-requirements.txt  environment.yml  flexible_windows_valid.ipynb  postgres.env  setup.cfg  setup.py  tox.ini
Concept Lists/: live_birth.csv  nicu.csv
Generators/: CohortGenerator.py  FeatureGenerator.py
Generators/ORM/: CohortGenerator.py  EolCohortGenerator.py  FeatureGenerator.py
Models/: readme.txt
Models/LogisticRegression/: RegressionGen.py
Models/Transformer/: transformers.py  visit_transformer.py
ORMTables/: cdm_6_0.py
Utils/: ancestor_utils.py  data_utils.py  dbutils.py  embedding_utils.py
Utils/ORM/: data_utils.py  postgres_db.py  session_maker.py
docs/: index.md
docs/assets/: style.scss
docs/sphinx/: .buildinfo  CohortGenerator.html  FeatureGenerator.html  config.html  data_utils.html  dbutils.html  example_google.html  genindex.html  github_pages_linter.py  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/concept_masking/: build.py  model.py
(+61 files in other folders)
