[metadata]
name = clinicalml-omop-learn-cdmv6
version = 0.0.1
author = Rohan Kodialam, Jake Marcus
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/clinicalml/omop-learn
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options] 
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    sqlalchemy
    pandas
    torch
    sklearn
    matplotlib
    ipywidgets
    ipython
    gensim
    scipy
    sparse
    psycopg2-binary

[options.packages.find]
exclude = 
    docs